        Choices-ll.UTF-8: x, y, z
        Indices-ll.UTF-8: 3, 1, 2
      this means that 'a' is translated into 'x', 'b' into 'y' and 'c'
      into 'z' for the language 'll', but "z, x, y" is displayed in that
      order.
    - If frontend is set to 'none', a dummy frontend is initialized.
      This can be useful in conjunction with debconf-communicate, e.g.
      to fix #223344.

  * Updated translations:
    - Anmar Oueja
      - created and translated to Arabic (ar.po)
    - Nikolai Prokoschenko
      - updated Russian translation
    - Safir Secerovic
      - Update Bosnian translation (bs.po).
    - Carlos Z.F. Liu
      - fix some serious errors in Simplified Chinese translation.

 -- Martin Sjogren <sjogren@debian.org>  Tue,  6 Jan 2004 23:39:01 +0100

cdebconf (0.53) unstable; urgency=low

  * Ming Hua
    - Initial Simplified Chinese translation (zh_CN.po)
  * Bart Cornelis
    - Merged Norewgian Nynorsk (nn.po) translation from skolelinux-cvs
  * André Dahlqvist
    - Update Swedish translation (sv.po)
  * Kęstutis Biliūnas
    - Updated Lithuanian translation (lt.po).
  * Tollef Fog Heen
    - Fix typo in debian/control in cdebconf-text-udeb description.

 -- Petter Reinholdtsen <pere@debian.org>  Wed, 31 Dec 2003 16:24:09 +0100

cdebconf (0.52) unstable; urgency=low

  * Bart Cornelis
    - Merged Norwegian Bokmael (nb.po) translation from skolelinux-cvs
  * Luis Ferreira
    -Added portuguese translation (pt.po)
  * André Dahlqvist
    - Added Swedish translation
  * Giuseppe Sacco
    - Updated italian translation (it.po)
  * Dennis Stampfer
    - Fixed invalid sv.po (Swedish translation)

 -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2003 19:55:03 -0500

cdebconf (0.51) unstable; urgency=low

  * Bartosz Fenski
    - Updated Polish (pl) translation.
  * Thiemo Seufer
    - Stop make to continue after errors.
    - Allow more efficient parallel make runs.
  * Verok Istvan
    - Initial Hungarian translation.
  * Arash Bijanzadeh