@@ -19,6 +19,8 @@ cdebconf (0.54) UNRELEASED; urgency=low
     - If frontend is set to 'none', a dummy frontend is initialized.
       This can be useful in conjunction with debconf-communicate, e.g.
       to fix #223344.
+  * Bastian Blank
+    - Fix progress bar calculations in newt frontend.
 
   * Updated translations:
     - Anmar Oueja
@@ -30,7 +32,7 @@ cdebconf (0.54) UNRELEASED; urgency=low
     - Carlos Z.F. Liu
       - fix some serious errors in Simplified Chinese translation.
 
- -- Martin Sjogren <sjogren@debian.org>  Tue,  6 Jan 2004 23:39:01 +0100
+ -- Bastian Blank <waldi@debian.org>  Sun, 01 Feb 2004 17:21:45 +0100
 
 cdebconf (0.53) unstable; urgency=low
 
